added vnp03dnb support

--- a/examples/experiments.ipynb
+++ b/examples/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "<module 'products' from '../products/__init__.py'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,35 +308,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# VNP02DNB"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[24.93397331, 24.97850037, 25.02305412, ..., 45.98316574,\n",
-       "        46.02572632, 46.06861877],\n",
-       "       [24.93208122, 24.97674942, 25.02131081, ..., 45.97977448,\n",
-       "        46.02232361, 46.06520462],\n",
-       "       [24.93017769, 24.97513962, 25.02020073, ..., 45.97639847,\n",
-       "        46.01893616, 46.0617981 ],\n",
-       "       ...,\n",
-       "       [21.30373573, 21.3474369 , 21.38975334, ..., 42.03189468,\n",
-       "        42.07458496, 42.11760712],\n",
-       "       [21.30073547, 21.34402466, 21.38656235, ..., 42.02973938,\n",
-       "        42.07242203, 42.11544037],\n",
-       "       [21.29780769, 21.34095573, 21.38399315, ..., 42.02759171,\n",
-       "        42.07027435, 42.11328888]])"
+       "<module 'products' from '../products/__init__.py'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "granule.lons"
+    "importlib.reload(products)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = '/home/griessbaum/MOD09/VNP03DNB.A2012092.1642.001.2017285224354.nc'\n",
+    "vnp02 = products.VNP03DNB(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10.78973866, 10.78894711, 10.78815651, ...,  6.6385808 ,\n",
+       "         6.63725662,  6.63592243],\n",
+       "       [10.79673862, 10.79594517, 10.79515171, ...,  6.64541388,\n",
+       "         6.64408588,  6.64275074],\n",
+       "       [10.80373955, 10.80294228, 10.80214596, ...,  6.65226889,\n",
+       "         6.65090799,  6.64946222],\n",
+       "       ...,\n",
+       "       [31.55126953, 31.5510273 , 31.55078506, ..., 26.86467171,\n",
+       "        26.86257744, 26.86047745],\n",
+       "       [31.55830193, 31.55805588, 31.55781364, ..., 26.87133217,\n",
+       "        26.86923599, 26.86714172],\n",
+       "       [31.56533241, 31.56508827, 31.56484222, ..., 26.87798882,\n",
+       "        26.87590027, 26.87380409]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vnp02.lats.astype(numpy.double)"
    ]
   },
   {
