added zlib, set lat/lon to f4, minor fix

--- a/examples/experiments.ipynb
+++ b/examples/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "lat_x = xarray.DataArray(lat, dims=['x', 'y']).chunk({'x': 500})\n",
     "lon_x = xarray.DataArray(lon, dims=['x', 'y']).chunk({'x': 500})\n",
     "\n",
-    "s_d = xarray.apply_ufunc(pystare.from_latlon2D, \n",
-    "                         lat_x,\n",
-    "                         lon_x,\n",
-    "                         dask='parallelized',\n",
-    "                         output_dtypes=[numpy.int64])\n",
+    "with dask.distributed.Client(n_workers=4) as client:\n",
+    "    s_d = xarray.apply_ufunc(pystare.from_latlon2D, \n",
+    "                             lat_x,\n",
+    "                             lon_x,\n",
+    "                             dask='parallelized',\n",
+    "                             output_dtypes=[numpy.int64])\n",
     "\n",
     "sids = numpy.array(s_d)"
    ]
@@ -53,30 +54,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_variable():\n",
-    "    sids_netcdf = rootgrp.createVariable(varname='STARE_index_5km', \n",
-    "                                     datatype='u8', \n",
-    "                                     dimensions=('i_1km', 'j_1km'),\n",
-    "                                     chunksizes=[i_1km, j_1km])\n",
-    "    \n",
-    "\n",
     "i_1km = lon.shape[0]\n",
     "j_1km = lon.shape[1]\n",
     "l_1km = i_1km * j_1km # this is wrong!\n",
     "\n",
-    "with netCDF4.Dataset('test.nc', \"w\", format=\"NETCDF4\") as rootgrp:\n",
+    "sidecar = '/home/griessbaum/MOD09/MOD09.A2019317.0815.006.2019319020759_stare.hdf'\n",
+    "\n",
+    "with netCDF4.Dataset(sidecar, \"w\", format=\"NETCDF4\") as rootgrp:\n",
     "    pass\n",
     "    \n",
-    "with netCDF4.Dataset('test.nc', \"a\", format=\"NETCDF4\") as rootgrp:\n",
+    "with netCDF4.Dataset(sidecar, \"a\", format=\"NETCDF4\") as rootgrp:\n",
     "    rootgrp.createDimension(\"i_1km\", i_1km)\n",
     "    rootgrp.createDimension(\"j_1km\", j_1km)\n",
     "    rootgrp.createDimension(\"l_1km\", i_1km*j_1km)\n",
     "\n",
-    "with netCDF4.Dataset('test.nc', \"a\", format=\"NETCDF4\") as rootgrp:\n",
+    "with netCDF4.Dataset(sidecar, \"a\", format=\"NETCDF4\") as rootgrp:\n",
     "    lats_netcdf = rootgrp.createVariable(varname='Latitude_1km', \n",
     "                                         datatype='f8', \n",
     "                                         dimensions=('i_1km', 'j_1km'),\n",
@@ -85,7 +81,7 @@
     "    lats_netcdf.units = 'degrees_north'\n",
     "    lats_netcdf[:, :] = lat\n",
     "\n",
-    "with netCDF4.Dataset('test.nc', \"a\", format=\"NETCDF4\") as rootgrp:\n",
+    "with netCDF4.Dataset(sidecar, \"a\", format=\"NETCDF4\") as rootgrp:\n",
     "    lons_netcdf = rootgrp.createVariable(varname='Longitude_1km',\n",
     "                                         datatype='f8', \n",
     "                                         dimensions=('i_1km', 'j_1km'),\n",
@@ -95,14 +91,14 @@
     "    lons_netcdf[:, :] = lon\n",
     "    \n",
     "\n",
-    "with netCDF4.Dataset('test.nc', 'a', format=\"NETCDF4\") as rootgrp:\n",
+    "with netCDF4.Dataset(sidecar, 'a', format=\"NETCDF4\") as rootgrp:\n",
     "    cover_netcdf = rootgrp.createVariable(varname='STARE_cover_1km', \n",
     "                                          datatype='u8', \n",
     "                                          dimensions=('l_1km'),\n",
     "                                          chunksizes=[l_1km])\n",
     "    cover_netcdf.long_name = 'SpatioTemporal Adaptive Resolution Encoding (STARE) cover'\n",
     "\n",
-    "with netCDF4.Dataset('test.nc', \"a\", format=\"NETCDF4\") as rootgrp:\n",
+    "with netCDF4.Dataset(sidecar, \"a\", format=\"NETCDF4\") as rootgrp:\n",
     "    sids_netcdf = rootgrp.createVariable(varname='STARE_index_1km', \n",
     "                                         datatype='u8', \n",
     "                                         dimensions=('i_1km', 'j_1km'),\n",
