added batch creation option

--- a/examples/MOD05.ipynb
+++ b/examples/MOD05.ipynb
@@ -77,22 +77,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "['/home/griessbaum/MOD09/MOD09.A2019317.0815.006.2019319020759.hdf']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#in file_path\n"
+    "import glob\n",
+    "folder = '/home/griessbaum/MOD09/'\n",
+    "search = '{folder}{sep}{trunk}*.{suffix}'\n",
+    "search = search.format(folder=folder, sep='/', trunk='MOD09', suffix='hdf')\n",
+    "files = glob.glob(search)"
    ]
   },
   {
