--- a/examples/MOD05.ipynb
+++ b/examples/MOD05.ipynb
@@ -77,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/home/griessbaum/MOD09/MOD09.A2019317.0815.006.2019319020759.hdf']"
+       "['/home/griessbaum/MOD09/VNP03DNB.A2012092.1642.001.2017285224354.nc']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,9 +94,20 @@
    "source": [
     "import glob\n",
     "folder = '/home/griessbaum/MOD09/'\n",
-    "search = '{folder}{sep}{trunk}*.{suffix}'\n",
-    "search = search.format(folder=folder, sep='/', trunk='MOD09', suffix='hdf')\n",
-    "files = glob.glob(search)"
+    "search = '{folder}{sep}{trunk}*[!_stare].{suffix}'\n",
+    "search = search.format(folder=folder, sep='/', trunk='VNP03DNB', suffix='nc')\n",
+    "files = glob.glob(search)\n",
+    "files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('t.csv', 'a') as cat:\n",
+    "    cat.writelines('abdf, asdfsdf \\n')"
    ]
   },
   {
