removed pandas dependency

--- a/examples/catalogue.ipynb
+++ b/examples/catalogue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pandas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -26,7 +33,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,15 +69,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#catalogue.str.split('/').str.get(-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
    "outputs": [],
@@ -99,44 +97,80 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 81,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0    /home/griessbaum/MOD09/MOD05_L2.A2019336.0000....\n",
-      "2    /home/griessbaum/MOD09/MOD05_L2.A2005349.2125....\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
    "source": [
-    "print(file_paths[skip==True])"
+    "# W/O Pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     True\n",
-       "1    False\n",
-       "2     True\n",
-       "dtype: bool"
+       "['/home/griessbaum/MOD09/MOD05_L2.A2019336.0000.061.2019336211522.hdf',\n",
+       " '/home/griessbaum/MOD09/MOD05_L2.A2020254.1320.061.2020255013126.hdf',\n",
+       " '/home/griessbaum/MOD09/MOD05_L2.A2005349.2125.061.2017294065400.hdf']"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "file_paths = glob.glob('/home/griessbaum/MOD09/MOD05*[!_stare].hdf')\n",
+    "file_paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/griessbaum/MOD09/MOD05_L2.A2005349.2125.061.2017294065400.hdf',\n",
+       " '/home/griessbaum/MOD09/MOD05_L2.A2020254.1320.061.2020255013126.hdf']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('../cat.txt', 'r') as cat:\n",
+    "    csv =cat.readlines()\n",
+    "catalogue = []\n",
+    "for row in csv:\n",
+    "    catalogue.append(row.split(',')[0])\n",
+    "catalogue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/griessbaum/MOD09/MOD05_L2.A2019336.0000.061.2019336211522.hdf']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(set(file_paths) - set(catalogue))"
+   ]
   },
   {
    "cell_type": "code",
