--- a/examples/catalogue.ipynb
+++ b/examples/catalogue.ipynb
@@ -155,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
