caught missing cover writeout

--- a/examples/MOD05.ipynb
+++ b/examples/MOD05.ipynb
@@ -9,11 +9,11 @@
     "from pyhdf.SD import SD\n",
     "import numpy\n",
     "import pystare\n",
-    "from pyhdf.SD import SD\n",
     "import importlib\n",
     "import sys\n",
     "sys.path.insert(0,'../') \n",
-    "import products.mod05"
+    "import staremaster.products.mod05\n",
+    "import staremaster.conversions"
    ]
   },
   {
@@ -24,7 +24,7 @@
     {
      "data": {
       "text/plain": [
-       "<module 'products.mod05' from '../products/mod05.py'>"
+       "<module 'staremaster.products.mod05' from '../staremaster/products/mod05.py'>"
       ]
      },
      "execution_count": 4,
@@ -33,7 +33,7 @@
     }
    ],
    "source": [
-    "importlib.reload(products.mod05)"
+    "importlib.reload(staremaster.products.mod05)"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "file_path = '/home/griessbaum/MOD09/MOD05_L2.A2005349.2125.061.2017294065400.hdf'\n",
-    "granule = products.mod05.MOD05(file_path)"
+    "granule = staremaster.products.mod05.MOD05(file_path)"
    ]
   },
   {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "['/home/griessbaum/MOD09/VNP03DNB.A2012092.1642.001.2017285224354.nc']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,12 +102,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "with open('t.csv', 'a') as cat:\n",
-    "    cat.writelines('abdf, asdfsdf \\n')"
+    "staremaster.conversions.gring2cover(granule.gring_lats, \n",
+    "                                    granule.gring_lons,\n",
+    "                                   8).dtype"
    ]
   },
   {
