--- a/examples/SSMIS.ipynb
+++ b/examples/SSMIS.ipynb
@@ -2549,7 +2549,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "STARE",
+   "display_name": "Conda STARE",
    "language": "python",
    "name": "stare"
   },
@@ -2563,7 +2563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
