dealing with fillvalues in latlon

--- a/examples/MOD09.ipynb
+++ b/examples/MOD09.ipynb
@@ -1,17 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Reading MOD09 granules"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,21 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'matplotlib'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpystare\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mndimage\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyhdf.SD import SD\n",
     "import numpy\n",
@@ -47,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'staremaster.products' from '/home/griessbaum/Dropbox/UCSB/STARE_Project/STAREMaster_py/examples/../staremaster/products/__init__.py'>"
+       "<module 'staremaster.products' from '/home/griessbaum/Dropbox/UCSB/STARE_Project/STAREMaster_py/staremaster/products/__init__.py'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,24 +72,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = '../tests/data/MOD09.A2002299.0710.006.2015151173939.hdf'\n",
+    "granule = staremaster.products.MOD09(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "granule.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'staremaster' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m file_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../tests/data/MOD09.A2012244.1835.006.2015248083747.hdf\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 2\u001b[0m granule \u001b[38;5;241m=\u001b[39m \u001b[43mstaremaster\u001b[49m\u001b[38;5;241m.\u001b[39mproducts\u001b[38;5;241m.\u001b[39mMOD09(file_path)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'staremaster' is not defined"
+     "data": {
+      "text/plain": [
+       "{'1km': masked_array(\n",
+       "   data=[[--, --, --, ..., 36.22785186767578, 36.22285079956055,\n",
+       "          36.21782302856445],\n",
+       "         [--, --, --, ..., 36.24024200439453, 36.235260009765625,\n",
+       "          36.23025131225586],\n",
+       "         [--, --, --, ..., 36.25263214111328, 36.24766540527344,\n",
+       "          36.242679595947266],\n",
+       "         ...,\n",
+       "         [--, --, --, ..., 53.46763610839844, 53.460235595703125,\n",
+       "          53.45280075073242],\n",
+       "         [--, --, --, ..., 53.479496002197266, 53.472110748291016,\n",
+       "          53.464691162109375],\n",
+       "         [--, --, --, ..., 53.49135208129883, 53.483985900878906,\n",
+       "          53.47658157348633]],\n",
+       "   mask=[[ True,  True,  True, ..., False, False, False],\n",
+       "         [ True,  True,  True, ..., False, False, False],\n",
+       "         [ True,  True,  True, ..., False, False, False],\n",
+       "         ...,\n",
+       "         [ True,  True,  True, ..., False, False, False],\n",
+       "         [ True,  True,  True, ..., False, False, False],\n",
+       "         [ True,  True,  True, ..., False, False, False]],\n",
+       "   fill_value=1e+20),\n",
+       " '500m': masked_array(\n",
+       "   data=[[--, --, --, ..., 36.21723222732544, 36.2147159576416,\n",
+       "          36.212199687957764],\n",
+       "         [--, --, --, ..., 36.22344160079956, 36.220930099487305,\n",
+       "          36.21841859817505],\n",
+       "         [--, --, --, ..., 36.22965121269226, 36.22714424133301,\n",
+       "          36.224637269973755],\n",
+       "         ...,\n",
+       "         [--, --, --, ..., 53.4713716506958, 53.46766376495361,\n",
+       "          53.463955879211426],\n",
+       "         [--, --, --, ..., 53.47731304168701, 53.47360897064209,\n",
+       "          53.46990489959717],\n",
+       "         [--, --, --, ..., 53.48325443267822, 53.479554176330566,\n",
+       "          53.47585391998291]],\n",
+       "   mask=[[ True,  True,  True, ..., False, False, False],\n",
+       "         [ True,  True,  True, ..., False, False, False],\n",
+       "         [ True,  True,  True, ..., False, False, False],\n",
+       "         ...,\n",
+       "         [ True,  True,  True, ..., False, False, False],\n",
+       "         [ True,  True,  True, ..., False, False, False],\n",
+       "         [ True,  True,  True, ..., False, False, False]],\n",
+       "   fill_value=1e+20)}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "granule.lats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import netCDF4 \n",
+    "i = sids.shape[0]\n",
+    "j = sids.shape[1]\n",
+    "varname = 's1'\n",
+    "i_name = 'i'\n",
+    "j_name = 'j'\n",
+    "if nom_res:    \n",
+    "    i_name += '_{nom_res}'.format(nom_res=nom_res)\n",
+    "    j_name += '_{nom_res}'.format(nom_res=nom_res)   \n",
+    "with netCDF4.Dataset('/home/griessbaum/Dropbox/UCSB/STARE_Project/STAREMaster_py/tests/data/MOD09.A2002299.0710.006.2015151173939_stare.nc', 'a', format=\"NETCDF4\") as rootgrp:\n",
+    "    grp = rootgrp    \n",
+    "    sids_netcdf = grp.createVariable(varname=varname, \n",
+    "                                     datatype='u8', \n",
+    "                                     dimensions=(i_name, j_name),\n",
+    "                                     chunksizes=[i, j],\n",
+    "                                     shuffle=True,\n",
+    "                                     zlib=True,\n",
+    "                                     fill_value=-1)\n",
+    "    sids_netcdf.long_name = 'SpatioTemporal Adaptive Resolution Encoding (STARE) index'\n",
+    "    sids_netcdf[:, :] = sids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "granule.create_sidecar(n_workers=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
      ]
     }
    ],
    "source": [
-    "file_path = '../tests/data/MOD09.A2012244.1835.006.2015248083747.hdf'\n",
-    "granule = staremaster.products.MOD09(file_path)"
+    "a = None\n",
+    "if a is None: \n",
+    "    print(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sids = granule.sids['1km']\n",
+    "#sids = sids[sids.mask == False]\n",
+    "#staremaster.conversions.min_resolution(sids)"
    ]
   },
   {
