--- a/examples/MOD05.ipynb
+++ b/examples/MOD05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,45 +10,25 @@
     "import numpy\n",
     "import pystare\n",
     "import importlib\n",
-    "import sys\n",
-    "sys.path.insert(0,'../') \n",
+    "\n",
     "import staremaster.products.mod05\n",
     "import staremaster.conversions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'staremaster.products.mod05' from '../staremaster/products/mod05.py'>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "importlib.reload(staremaster.products.mod05)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = '/home/griessbaum/MOD09/MOD05_L2.A2005349.2125.061.2017294065400.hdf'\n",
-    "granule = staremaster.products.mod05.MOD05(file_path)"
+    "file_path = '../tests/data/mod05/MOD05_L2.A2005349.2125.061.2017294065400.hdf'\n",
+    "granule = staremaster.products.mod05.MOD05(file_path)\n",
+    "granule.load()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +46,7 @@
        "  'VALUE': '(1, 2, 3, 4)'}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,32 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/home/griessbaum/MOD09/VNP03DNB.A2012092.1642.001.2017285224354.nc']"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import glob\n",
-    "folder = '/home/griessbaum/MOD09/'\n",
-    "search = '{folder}{sep}{trunk}*[!_stare].{suffix}'\n",
-    "search = search.format(folder=folder, sep='/', trunk='VNP03DNB', suffix='nc')\n",
-    "files = glob.glob(search)\n",
-    "files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,15 +66,69 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "staremaster.conversions.gring2cover(granule.gring_lats, \n",
-    "                                    granule.gring_lons,\n",
-    "                                   8).dtype"
+    "                                    granule.gring_lons, 8).dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[19.3618275007196, 16.3276616720112, 33.8625485332967, 37.5897944906235]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "granule.gring_lats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "granule.make_sids(n_workers=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[13, 13, 13, ..., 10, 10, 10],\n",
+       "       [13, 13, 13, ..., 10, 10, 10],\n",
+       "       [13, 13, 13, ..., 10, 10, 10],\n",
+       "       ...,\n",
+       "       [12, 12, 12, ..., 11, 11, 11],\n",
+       "       [12, 12, 12, ..., 11, 11, 11],\n",
+       "       [12, 12, 12, ..., 11, 11, 11]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pystare.spatial_resolution(granule.sids['5km'])"
    ]
   },
   {
@@ -132,7 +141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
